--- a/router-config/openwrt-21.02/.config
+++ b/router-config/openwrt-21.02/.config
@@ -117,6 +117,8 @@ CONFIG_PACKAGE_luci-i18n-base-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-base-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-amlogic-en=y
 CONFIG_PACKAGE_luci-i18n-amlogic-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-wireguard-en=y
+CONFIG_PACKAGE_luci-i18n-wireguard-zh-cn=y
 
 # Firmware:
 CONFIG_PACKAGE_brcmfmac-firmware-4329-sdio=y
@@ -145,6 +147,7 @@ CONFIG_PACKAGE_rtl8723au-firmware=y
 CONFIG_PACKAGE_rtl8723bs-firmware=y
 CONFIG_PACKAGE_rtl8723bu-firmware=y
 CONFIG_PACKAGE_wireless-regdb=y
+CONFIG_PACKAGE_wireguard-tools=y
 
 # Wireless Drivers:
 # CONFIG_PACKAGE_kmod-adm8211 is not set
@@ -426,6 +429,7 @@ CONFIG_PACKAGE_kmod-mii=y
 # CONFIG_PACKAGE_kmod-via-rhine is not set
 # CONFIG_PACKAGE_kmod-via-velocity is not set
 # CONFIG_PACKAGE_kmod-vmxnet3 is not set
+CONFIG_PACKAGE_kmod-wireguard=y
 
 # WirelessAPD:
 CONFIG_PACKAGE_hostapd-common=y
@@ -447,7 +451,7 @@ CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-proto-qmi=y
 CONFIG_PACKAGE_luci-proto-relay=y
 # CONFIG_PACKAGE_luci-proto-vpnc is not set
-# CONFIG_PACKAGE_luci-proto-wireguard is not set
+CONFIG_PACKAGE_luci-proto-wireguard=y
 
 # Other Config info:
 CONFIG_BRCMFMAC_SDIO=y
@@ -548,7 +552,7 @@ CONFIG_PACKAGE_luci-app-upnp=y
 # CONFIG_PACKAGE_luci-app-vpnbypass is not set
 # CONFIG_PACKAGE_luci-app-watchcat is not set
 # CONFIG_PACKAGE_luci-app-wifischedule is not set
-# CONFIG_PACKAGE_luci-app-wireguard is not set
+CONFIG_PACKAGE_luci-app-wireguard=y
 CONFIG_PACKAGE_luci-app-wol=y
 # CONFIG_PACKAGE_luci-app-xinetd is not set
 # CONFIG_PACKAGE_luci-app-yggdrasil is not set
