--- a/router-config/lede-master/.config
+++ b/router-config/lede-master/.config
@@ -391,7 +391,7 @@ CONFIG_PACKAGE_luci-proto-ppp=y
 CONFIG_PACKAGE_luci-proto-qmi=y
 CONFIG_PACKAGE_luci-proto-relay=y
 # CONFIG_PACKAGE_luci-proto-vpnc is not set
-# CONFIG_PACKAGE_luci-proto-wireguard is not set
+CONFIG_PACKAGE_luci-proto-wireguard=y
 
 # Other Config info:
 CONFIG_BRCMFMAC_SDIO=y
@@ -524,7 +524,7 @@ CONFIG_PACKAGE_luci-app-zerotier=y
 # CONFIG_PACKAGE_luci-app-watchcat is not set
 # CONFIG_PACKAGE_luci-app-webadmin is not set
 # CONFIG_PACKAGE_luci-app-wifischedule is not set
-# CONFIG_PACKAGE_luci-app-wireguard is not set
+CONFIG_PACKAGE_luci-app-wireguard=y
 # CONFIG_PACKAGE_luci-app-wrtbwmon is not set
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 
@@ -679,7 +679,7 @@ CONFIG_PACKAGE_uuidgen=y
 CONFIG_PACKAGE_vim=y
 CONFIG_PACKAGE_vsftpd-alt=y
 CONFIG_PACKAGE_wireless-tools=y
-# CONFIG_PACKAGE_wireguard-tools is not set
+CONFIG_PACKAGE_wireguard-tools=y
 CONFIG_PACKAGE_whereis=y
 CONFIG_PACKAGE_wget=y
 CONFIG_PACKAGE_wwan=y
