--- a/router-config/openwrt-21.02/.config
+++ b/router-config/openwrt-21.02/.config
@@ -708,7 +708,7 @@ CONFIG_PACKAGE_uuidgen=y
 CONFIG_PACKAGE_vim=y
 CONFIG_PACKAGE_vsftpd-alt=y
 CONFIG_PACKAGE_wireless-tools=y
-# CONFIG_PACKAGE_wireguard-tools is not set
+CONFIG_PACKAGE_wireguard-tools=y
 CONFIG_PACKAGE_whereis=y
 CONFIG_PACKAGE_wget=y
 CONFIG_PACKAGE_wwan=y
