--- a/router-config/openwrt-21.02/.config
+++ b/router-config/openwrt-21.02/.config
@@ -456,6 +456,7 @@ CONFIG_PACKAGE_luci-proto-wireguard=y
 # Other Config info:
 CONFIG_BRCMFMAC_SDIO=y
 CONFIG_BRCMFMAC_USB=y
+CONFIG_PACKAGE_openssh-sftp-server=y
 
 # LuCI-app:
 # CONFIG_PACKAGE_luci-app-acl is not set
