--- a/router-config/lede-master/.config
+++ b/router-config/lede-master/.config
@@ -396,6 +396,7 @@ CONFIG_PACKAGE_luci-proto-wireguard=y
 # Other Config info:
 CONFIG_BRCMFMAC_SDIO=y
 CONFIG_LUCI_LANG_en=y
+CONFIG_PACKAGE_openssh-sftp-server=y
 
 # LuCI-app:
 CONFIG_PACKAGE_luci-app-accesscontrol=y
