--- a/.github/workflows/build-openwrt-official.yml
+++ b/.github/workflows/build-openwrt-official.yml
@@ -29,10 +29,10 @@ on:
 env:
   REPO_URL: https://github.com/openwrt/openwrt
   REPO_BRANCH: master
-  FEEDS_CONF: router-config/openwrt-21.02/feeds.conf.default
-  CONFIG_FILE: router-config/openwrt-21.02/.config
-  DIY_P1_SH: router-config/openwrt-21.02/diy-part1.sh
-  DIY_P2_SH: router-config/openwrt-21.02/diy-part2.sh
+  FEEDS_CONF: router-config/openwrt-master/feeds.conf.default
+  CONFIG_FILE: router-config/openwrt-master/.config
+  DIY_P1_SH: router-config/openwrt-master/diy-part1.sh
+  DIY_P2_SH: router-config/openwrt-master/diy-part2.sh
   TZ: Asia/Shanghai
 
 jobs:
