--- a/.github/workflows/build-openwrt-official.yml
+++ b/.github/workflows/build-openwrt-official.yml
@@ -91,6 +91,7 @@ jobs:
         run: |
           cd openwrt
           make defconfig
+          sed -i 's/CONFIG_PACKAGE_dnsmasq=y/# CONFIG_PACKAGE_dnsmasq is not set/g' .config
           make download -j8
           find dl -size -1024c -exec ls -l {} \;
           find dl -size -1024c -exec rm -f {} \;
